lux: fix btn-outline in light and dark mode, closes #1331

--- a/docs/5/lux/_variables.scss
+++ b/docs/5/lux/_variables.scss
@@ -9,9 +9,9 @@ $theme: "lux" !default;
 
 $white:    #fff !default;
 $gray-100: #f8f9fa !default;
-$gray-200: #f7f7f9 !default;
-$gray-300: #eceeef !default;
-$gray-400: #ced4da !default;
+$gray-200: #f0f1f2 !default;
+$gray-300: #e0e1e2 !default;
+$gray-400: #cdcecf !default;
 $gray-500: #adb5bd !default;
 $gray-600: #919aa1 !default;
 $gray-700: #55595c !default;
@@ -36,7 +36,7 @@ $success:       $green !default;
 $info:          $cyan !default;
 $warning:       $yellow !default;
 $danger:        $red !default;
-$light:         $white !default;
+$light:         $gray-200 !default;
 $dark:          $gray-800 !default;
 
 $min-contrast-ratio:   1.9 !default;
